kubernetes/development/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
    secrets-injection: enabled
