kubernetes/development/eventstore.yml
apiVersion: v1
kind: Service
metadata:
    name: eventstorage # cannot user `eventstore` as this creates `EVENTSTORE_` envvars, https://developers.eventstore.com/server/v20.10/configuration.html#environment-variables
    namespace: dev
spec:
    selector:
        app: eventstorage
    ports:
        - name: tcp
          port: 1113
          targetPort: 1113
        - name: http
          port: 2113
          targetPort: 2113
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: eventstorage
    name: eventstorage
    namespace: dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: eventstorage
    template:
        metadata:
            labels:
                app: eventstorage
        spec:
            containers:
                - name: eventstorage
                  image: ghcr.io/eventstore/eventstore:21.10.0-alpha-arm64v8
                  ports:
                      - containerPort: 1113
                      - containerPort: 2113
                  volumeMounts:
                      - mountPath: /var/lib/eventstore
                        name: stroage
            volumes:
                - name: stroage
                  persistentVolumeClaim:
                      claimName: eventstorage-volume
