kubernetes/development/identity.yml
apiVersion: v1
kind: Service
metadata:
    name: identity
    namespace: debens-dev
spec:
    selector:
        app: identity
    ports:
        - name: api
          port: 80
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: identity
    name: identity
    namespace: debens-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: identity
    template:
        metadata:
            labels:
                app: identity
        spec:
            containers:
                - name: identity
                  image: debens/service-identity
                  ports:
                      - containerPort: 3000
                  resources: {}
