kubernetes/development/minio.yaml
apiVersion: v1
kind: Service
metadata:
    name: minio
    namespace: debens-dev
spec:
    selector:
        app: minio
    ports:
        - port: 9090
          name: console
        - port: 9000
          name: s3
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minio
    namespace: debens-dev
    labels:
        app: minio
spec:
    replicas: 1
    template:
        metadata:
            name: minio
            labels:
                app: minio
        spec:
            volumes:
                - name: data
                  emptyDir:
                      sizeLimit: 500Mi
            containers:
                - name: minio
                  image: quay.io/minio/minio:latest
                  imagePullPolicy: IfNotPresent
                  #          env:
                  #            - name: MINIO_ACCESS_KEY
                  #              value: "minio"
                  #            - name: MINIO_SECRET_KEY
                  #              value: "minio123"
                  livenessProbe:
                      httpGet:
                          path: /minio/health/live
                          port: 9000
                      initialDelaySeconds: 120
                      periodSeconds: 20
                  readinessProbe:
                      httpGet:
                          path: /minio/health/ready
                          port: 9000
                      initialDelaySeconds: 120
                      periodSeconds: 20
                  resources:
                      requests:
                          memory: "1000Mi"
                          cpu: "1000m"
                      limits:
                          memory: "1500Mi"
                          cpu: "1500m"
                  volumeMounts:
                      - mountPath: /data
                        name: data
                  command:
                      - /bin/bash
                      - -c
                  args:
                      - minio server /data --console-address :9090
            restartPolicy: Always
    selector:
        matchLabels:
            app: minio
