kubernetes/development/persona.yml
apiVersion: v1
kind: Service
metadata:
    name: persona
    namespace: debens-dev
spec:
    selector:
        app: persona
    ports:
        - name: api
          port: 80
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: persona
    name: persona
    namespace: debens-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: persona
    template:
        metadata:
            labels:
                app: persona
        spec:
            containers:
                - name: persona
                  image: debens/service-persona
                  ports:
                      - containerPort: 3000
                  resources: {}
