kubernetes/development/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dev.debens.app
    namespace: dev
    annotations:
        cert-manager.io/issuer: "letsencrypt-dev"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - static.dev.debens.app
              - identity.dev.debens.app
          secretName: tls-dev-ingress-http
    rules:
        - host: identity.dev.debens.app
          http:
              paths:
                  - path: /.well-known/apple-app-site-association
                    pathType: Exact
                    backend:
                        service:
                            name: identity
                            port:
                                name: api
                  - path: /.well-known/assetlinks.json
                    pathType: Exact
                    backend:
                        service:
                            name: identity
                            port:
                                name: api
                  - path: /.well-known
                    pathType: Prefix
                    backend:
                        service:
                            name: hanko
                            port:
                                name: public
                  - path: /webauthn
                    pathType: Prefix
                    backend:
                        service:
                            name: identity
                            port:
                                name: api
        - host: static.dev.debens.app
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: minio
                            port:
                                name: s3
---
