kubernetes/development/nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dev.debens.app
    namespace: debens-dev
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: api.dev.debens.app
          http:
              paths:
                  - path: /.well-known/apple-app-site-association
                    pathType: Prefix
                    backend:
                        service:
                            name: identity
                            port:
                                name: api
                  - path: /.well-known/assetlinks.json
                    pathType: Prefix
                    backend:
                        service:
                            name: identity
                            port:
                                name: api
        - host: static.dev.debens.app
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: minio
                            port:
                                name: s3
