kubernetes/development/rabbitmq.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: dev
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - dev-rabbitmq
  defaultBackend:
    service:
      name: rabbitmq
      port: 
        name: management
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    namespace: dev
spec:
    selector:
        app: rabbitmq
    ports:
        - name: ampq
          port: 5672
        - name: management
          port: 15672
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: rabbitmq
    name: rabbitmq
    namespace: dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:latest
                  ports:
                      - containerPort: 5672
                      - containerPort: 15672
                  volumeMounts:
                      - name: config
                        mountPath: /etc/rabbitmq/enabled_plugins
                        subPath: enabled_plugins
                      - name: config
                        mountPath: /etc/rabbitmq/definitions.json
                        subPath: definitions.json
                      - name: config
                        mountPath: /etc/rabbitmq/rabbitmq.conf
                        subPath: rabbitmq.conf
                      - mountPath: /var/lib/rabbitmq
                        name: stroage
            volumes:
                - name: config
                  configMap:
                      name: rabbitmq-config
                - name: stroage
                  persistentVolumeClaim:
                      claimName: rabbitmq-volume
